--- a/app/views/idols/_form.html.erb
+++ b/app/views/idols/_form.html.erb
@@ -1,32 +1,48 @@
-<%= form_with(model: idol, local: true) do |form| %>
-  <% if idol.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(idol.errors.count, "error") %> prohibited this idol from being saved:</h2>
+<%= form_for @idol, :html => { :class => "form-horizontal idol" } do |f| %>
 
-      <ul>
-      <% idol.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @idol.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@idol.errors.count, "error") %> prohibited this idol from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @idol.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :idol_name %>
+  <div class="form-group">
+    <%= f.label :name, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :name, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:name) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :yomigana, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :yomigana, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:yomigana) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.file_field :image, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:image) %>
   </div>
 
-  <div class="field">
-    <%= form.label :yomigana %>
-    <%= form.text_field :yomigana, id: :idol_yomigana %>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                idols_path, :class => 'btn btn-default' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image, id: :idol_image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
