--- a/app/views/idols/edit.html.erb
+++ b/app/views/idols/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Idol</h1>
-
-<%= render 'form', idol: @idol %>
-
-<%= link_to 'Show', @idol %> |
-<%= link_to 'Back', idols_path %>
+<%- model_class = Idol -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
