--- a/app/views/idols/index.html.erb
+++ b/app/views/idols/index.html.erb
@@ -1,31 +1,42 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Idols</h1>
-
-<table>
+<%- model_class = Idol -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Yomigana</th>
-      <th>Image</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:yomigana) %></th>
+      <th><%= model_class.human_attribute_name(:image) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @idols.each do |idol| %>
       <tr>
+        <td><%= link_to idol.id, idol_path(idol) %></td>
         <td><%= idol.name %></td>
         <td><%= idol.yomigana %></td>
         <td><%= image_tag idol.image.to_s %></td>
-        <td><%= link_to 'Show', idol %></td>
-        <td><%= link_to 'Edit', edit_idol_path(idol) %></td>
-        <td><%= link_to 'Destroy', idol, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l idol.created_at %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.links.show")),
+                      idol_path(idol), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_idol_path(idol), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      idol_path(idol),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Idol', new_idol_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_idol_path,
+            :class => 'btn btn-primary' %>
