--- a/app/views/idols/show.html.erb
+++ b/app/views/idols/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Idol -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @idol.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @idol.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:yomigana) %>:</strong></dt>
+  <dd><%= @idol.yomigana %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image) %>:</strong></dt>
+  <dd><%= image_tag @idol.image.to_s %></dd>
+</dl>
 
-<p>
-  <strong>Yomigana:</strong>
-  <%= @idol.yomigana %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @idol.image.to_s %>
-</p>
-
-<%= link_to 'Edit', edit_idol_path(@idol) %> |
-<%= link_to 'Back', idols_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              idols_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_idol_path(@idol), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              idol_path(@idol),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
